--- a/scss/general/new_model/_new.scss
+++ b/scss/general/new_model/_new.scss
@@ -8,21 +8,21 @@
             padding: 30px 15px;
         }
 
-        &__cost {
-            margin-bottom: 0;
-        }
+        // &__cost {
+        //     margin-bottom: 0;
+        // }
 
-        &__cart_link {
-            display: none;
-        }
+        // &__cart_link {
+        //     display: none;
+        // }
 
-        &__unavailable_link {
-            display: none;
-        }
+        // &__unavailable_link {
+        //     display: none;
+        // }
 
-        &__discontinued_link {
-            display: none;
-        }
+        // &__discontinued_link {
+        //     display: none;
+        // }
     }
 
     &__title {
