--- a/scss/general/similar_product/_similar.scss
+++ b/scss/general/similar_product/_similar.scss
@@ -1,24 +1,24 @@
 .similar {
     width: 100%;
 
-    .tile {
+    // .tile {
 
-        &__cost {
-            margin-bottom: 0;
-        }
+    //     &__cost {
+    //         margin-bottom: 0;
+    //     }
 
-        &__cart_link {
-            display: none;
-        }
+    //     &__cart_link {
+    //         display: none;
+    //     }
 
-        &__unavailable_link {
-            display: none;
-        }
+    //     &__unavailable_link {
+    //         display: none;
+    //     }
 
-        &__discontinued_link {
-            display: none;
-        }
-    }
+    //     &__discontinued_link {
+    //         display: none;
+    //     }
+    // }
 
     &__body {
         width: 100%;
